Fixed things so all cards can fit in without scrollbars

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,14 @@
 /*Global CSS definitions go here*/
 
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap");
+
+*,
+*:after,
+*:before {
+  box-sizing: border-box;
+  color: inherit;
+  margin: 0;
+  padding: 0;
+  border: none;
+  outline: none;
+}
